--- a/calculator/src/style.css
+++ b/calculator/src/style.css
@@ -7,6 +7,49 @@ body{
     background: linear-gradient(to right, #00AAFF, #00FF6C);
 }
 
-.calculator {
-    
+.calculator-grid {
+    display: grid;
+    margin-top: 2rem;
+    justify-content: center;
+    grid-template-columns: repeat( 4, 6rem);
+    grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
+}
+
+.span-two {
+    grid-column: span 2;
+}
+
+.output {
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .55);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: .75rem;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, .65);
+}
+
+.calculator-grid > button:hover,
+.calculator-grid > button:focus {
+    background-color: rgba(255, 255, 255, .5);
+}
+
+.output .prevuous-operant {
+    color: rgba(255, 255, 255, .55);
+    font-size: 1.5rem;
+}
+
+.output .current-operant {
+    color: white;
+    font-size: 2.5rem;
 }
